--- a/package.json
+++ b/package.json
@@ -6,25 +6,28 @@
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "pre": "npm run build && npm run tailwind && electron ./dist/main.js",
+    "start": "npm run build && electron ./dist/main.js",
+    "tailwind": "npx tailwindcss -i ./src/css/tailwind.css -o ./dist/tailwind.css"
   },
-  "repository": "https://github.com/electron/electron-quick-start-typescript",
+  "repository": "https://github.com/ertrii/devernet-desktop",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo",
-    "typescript"
+    "typescript",
+    "internet"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "ertrii",
+  "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "electron": "^13.1.4",
     "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2",
     "typescript": "^4.3.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "daisyui": "^1.6.0"
+  }
 }
